--- a/media/css/Dashboard.css
+++ b/media/css/Dashboard.css
@@ -3,14 +3,22 @@
 	line-height:1.5em;
 	width:100%;
 	border-collapse:collapse;
+	table-layout: fixed
 }
 
-#ruxly_dashboard .wp_system_info{padding:0 0 0 0;}
-
+/* Negate padding from wp */
+.wp_system_info{
+	margin-left:-12px;
+	margin-right:-12px;
+	margin-top:-11px;
+}
 #wp_system_info .hdr{background-color:#222;text-align:center;}
 #wp_system_info .hdr h2{color:white;}
 #wp_system_info tbody tr:nth-child(odd){background-color:rgba(0,0,0,0.05);}
+#wp_system_info td,#wp_system_info th:not(.hdr){padding:5px;}
+
 #wp_system_info th{text-align:left;}
+#wp_system_info td{word-wrap:break-word;}
 #wp_system_info progress{width:90%;margin:0 auto;}
 #wp_system_info meter{
     background: #EEE;
@@ -20,27 +28,13 @@
 	width:90% !important;
 }
 
-#wp_system_info .breakword{word-break: break-all;}
+#wp_system_info .breakword{word-break: break-word;}
 
 .wp_system_info .bottom{height:2em;}
 .wp_system_info .bottom a{float:left:}
 .wp_system_info .bottom span{float:right;}
 
 
-#ruxly_dashboard{
-	background-color:#3b4354;
-	color:rgba(255, 255, 255, 0.8);
-}
-
-#ruxly_dashboard .hndle{
-	border-bottom:none;
-	color:white;
-	background-color:#2574ab;
-}
-
-#ruxly_dashboard .inside{padding:0;margin-top:0;}
-
-#ruxly_dashboard th{padding-right:5px;padding-left:15px}
 
 
 
