--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -16,6 +16,14 @@ TODO: Prefix all these, so they dont interfere with other plugins
 .cOrange{color:#f39c12 !important;}
 .cDark{color:#2c3e50 !important;}
 
+
+.bgBlue{background-color:#3498db !important;}
+.bgRed{background-color:#c0392b !important;}
+.bgGreen{background-color:#27ae60 !important;}
+.bgPurple{background-color:#8e44ad !important;}
+.bgOrange{background-color:#f39c12 !important;}
+.bgDark{background-color:#2c3e50 !important;}
+
 .truthy{color:#27ae60 !important;}
 .falsy{color:#c0392b !important;}
 .number{color:#3498db !important;}
