--- a/media/css/bar.css
+++ b/media/css/bar.css
@@ -1,8 +1,44 @@
 /*Debug Bar*/
 body{margin-bottom:50px;}
-#dbg_bar *{
-	box-sizing:border-box;	
+
+#dbg_bar .cBlue{color:#3498db !important;}
+#dbg_bar .cRed{color:#c0392b !important;}
+#dbg_bar .cGreen{color:#27ae60 !important;}
+#dbg_bar .cPurple{color:#8e44ad !important;}
+#dbg_bar .cOrange{color:#f39c12 !important;}
+#dbg_bar .cDark{color:#2c3e50 !important;}
+#dbg_bar .bgBlue{background-color:#3498db !important;}
+#dbg_bar .bgRed{background-color:#c0392b !important;}
+#dbg_bar .bgGreen{background-color:#27ae60 !important;}
+#dbg_bar .bgPurple{background-color:#8e44ad !important;}
+#dbg_bar .bgOrange{background-color:#f39c12 !important;}
+#dbg_bar .bgDark{background-color:#2c3e50 !important;}
+
+#dbg_bar *{box-sizing:border-box;}
+
+#dbg_bar h1{margin:5px 0;color:#2c3e50;}
+#dbg_bar h2{margin:5px 0;color:#2c3e50;}
+#dbg_bar h3{margin:5px 0;color:#2c3e50;}
+#dbg_bar h4{margin:5px 0;color:#2c3e50;}
+#dbg_bar h5{margin:5px 0;color:#2c3e50;}
+#dbg_bar label{margin:0;}
+#dbg_bar ul li{margin-bottom:0;}
+#dbg_bar .file-categories{list-style:none;padding:0;margin:0;}
+#dbg_bar .file-categories li{display:inline-block;}
+
+#dbg_bar td.code{
+	background-color:#193549;
+	vertical-align:text-top;color:white;
 }
+#dbg_bar td.code ol li{
+	color:white;
+}
+
+
+
+
+.pre{whitespace:pre;}
+
 #dbg_bar [class*=fa-]{	
 	display: inline-block;
 	font-family: FontAwesome;
@@ -37,8 +73,6 @@ body{margin-bottom:50px;}
     transition:background-color 1s;  
 }
 
-
-
 #debug-bar-resize:active,#debug-bar-resize:hover{
 	background-color:#007FAC;
 	background-color:rgba(0,127,172,0.3);
@@ -50,14 +84,14 @@ body{margin-bottom:50px;}
 	padding: 0px 10px 0 0;
 	margin:0;
 	text-align:left;
-	width:100%;
+	width:100%;	
 }
 #dbg_bar .tabs li:not(.right){
 	border-right:1px solid black;
 	position:relative;	
 	display: inline-block;
 	vertical-align: top;
-	margin-top: 3px;
+	margin:3px 1px 0 1px;
 	line-height: 36px;
 	font-weight: normal;
 	color: #999;
@@ -70,11 +104,13 @@ body{margin-bottom:50px;}
 	border-top: 4px solid transparent;
 }
 #dbg_bar .tabs li.current{background-color:#fcfcfc;}
+#dbg_bar .tabs li{outline: none !important;}
 
 #dbg_bar .tabs li:not(.right):hover{
 	background:#ebebeb;
 }
 #dbg_bar .tabs li{
+	padding:0;
 	display:inline-block;
 	color:#555;
 	text-decoration:none;
@@ -88,10 +124,11 @@ body{margin-bottom:50px;}
 #dbg_bar .tabs li.right{
 	float:right;
 	padding: 0 5px;
+	font-size:14px;
 }
 
 #dbg_bar .tabs a{
-	font-size:16px;
+	font-size:14px;
 	text-decoration:none;
 	display:inline-block;
 	width:100%;
@@ -100,15 +137,22 @@ body{margin-bottom:50px;}
 	color:black;
 }
 
-
-
-#dbg_bar .dbg_body{background:white;height:	200px;overflow-y:scroll;}
-#dbg_bar .dbg_body .panel{display: none;padding:15px;}
+#dbg_bar .dbg_body{background:white;height:	200px;width:100%;overflow-y:scroll;}
+#dbg_bar .dbg_body .panel{display: none;padding:0;width:100%;min-height:100%;}
 #dbg_bar .dbg_body .panel.active{display:block;}
 #dbg_bar .panel > table{width:100%;}
 #dbg_bar .panel > table tr{width:100%;}
+#dbg_bar .panel table > td:first-child,#dbg_bar .panel table > th:first-child{padding-left:10px;}
 #dbg_bar .panel > table td,#dbg_bar .panel > table span{word-wrap:break-word}
 #dbg_bar .panel > table{width:100%;border-collapse:collapse;}
+
+#dbg_about .inner{
+	min-height:100%;
+	display: flex;
+	align-items: center;	
+	justify-content: center;
+}
+
 #dbg_bar table thead th{
 	font-weight:bold;
 	text-align:left;
@@ -124,24 +168,30 @@ body{margin-bottom:50px;}
 #dbg_bar tbody tr:nth-child(even){background-color:#f2f2f2;}
 #dbg_bar thead th{background:black;color:white;}
 
-
-
-.dbg_body code.sql{
+#dbg_bar code.sql{
 	display:block;
 	background-color:rgb(20, 20, 20);
-	border-radius:3px;
 	color:white;
 	padding:10px;
 	line-height:1.5em;
 }
-#dbg_bar .qry{width:70%;}
+
+#dbg_bar .code_container{
+	width:100%;
+	height:100%;
+	background-color:#141414;
+	display:flex;
+	flex-grow:1;
+}
+
+#dbg_bar .qry{width:60%;background:#141414;}
 #dbg_bar .dbg_body .mn{color:#c0392b;}
 #dbg_bar .dbg_body .op{color:#f1c40f;}
 #dbg_bar .dbg_body .cnd{color:#2980b9;}
 #dbg_bar .dbg_body .int{color:#2980b9;}
 #dbg_bar .dbg_body .str{color:#2ecc71}
 #dbg_bar h3{text-align:center;color:#2980b9;margin:20px;font-size:1.4em;}
-#dbg_bar .dbg_out td{padding:3px;}
+#dbg_bar .dbg_out td{padding:3px;word-break: break-all;}
 
 #dbg_files > ul li{display:inline-block;}
 
@@ -167,24 +217,25 @@ body{margin-bottom:50px;}
 	vertical-align: baseline;
 	background-color: #777;
 	border-radius: 10px;	
-	
+	position:relative;	
 }
 
-/*
-#dbg_bar .tabs .right .bdg::before{
-	content: ' ';
+#dbg_bar .tabs li.right .bdg::before{
+	/*
+	border:10px 10px 10px 0;
+	width:8px;
+	height:8px;
+	background-color:transparent;
+	content:'';
 	display:inline-block;
-	position 	:relative;
-	left 		:-19px;
+	position:absolute;
+	left:-3px;
+	top:0;
 	border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
-    border-left: 10px solid red;
-	transform: rotate(180deg);
+    border-right: 10px solid #3498db;
+	*/
 }
-*/
-
-#dbg_bar .tabs .bdg.left{border-radius: 0 10px 10px 10px;}
-#dbg_bar .tabs .right .bdg{border-radius: 10px 10px 10px 0px;}
 
 
 #dbg_bar .bgBlue{background-color:#3498db !important;}
@@ -195,11 +246,63 @@ body{margin-bottom:50px;}
 #dbg_bar .bgOrange{background-color:#e67e22 !important;}
 #dbg_bar .bgDark{background-color:#2c3e50 !important;}
 
-
-
 #dbg_bar .time{margin-right:10px;}
 #dbg_bar .stats{transition: all .2s ease-in-out;cursor:pointer;margin-top:10px;}
-#dbg_bar .stats:hover{transform: scale(1.5);}
+#dbg_bar .stats:hover{transform: scale(1.2);z-index:1000;position:relative;}
 
+#dbg_bar #log{padding:0;}
+#dbg_bar #log .content{width:calc(100% - 200px);}
 
+#dbg_bar #log li{
+    padding: 3px 6px;
+    border-bottom: 1px solid #eee;
+    position: relative;
+	list-style:none;
+	position:relative;
+}
+#dbg_bar #log li:hover{background: #fafafa;}
+#dbg_bar #log li .label,.dbg_body .log li .date{
+	position:absolute;
+	top:0;
+	right:0;
+	width:100px;
+	font-size: 12px;
+    padding: 2px 4px;
+    color: #888;
+    margin: 0 2px;
+	text-decoration: none;	
+}
+#dbg_bar #log li .label{right:100px;}
 
+#dbg_bar #log li.warning span.var{color:#f1c40f}
+#dbg_bar #log li.error span.var{color:#e74c3c}
+#dbg_bar #log li.success span.var{color:#2ecc71}
+#dbg_bar #log li.info span.var{color:#3498db}
+
+#dbg_bar td,#dbg_bar th{padding:5px;}
+
+#dbg_bar .pre.code{
+	color:white;
+	list-style:none;
+	padding-left:5px;
+}
+#dbg_bar .pre.code .lineNum{
+	font-size:0.8em;
+	color:#eeeded;
+	width:30px;
+	padding-right:10px;
+}
+
+#dbg_bar .pre.code .error{background-color:rgba(255,0,0,0.3);}
+#dbg_bar .pre.code .error .lineNum{font-weight:bold;color:red;}
+
+#dbg_bar .value-info{
+	font-family:"Lucida Console", Monaco, monospace;
+	cursor:pointer;
+}
+#dbg_bar .value-info.expanded{
+    white-space: pre;
+}
+#dbg_bar .trace span{padding-right:15px;}
+
+#dbg_bar .extensions li{display:inline-block;padding-right:5px;}
