--- a/media/css/bar.css
+++ b/media/css/bar.css
@@ -171,6 +171,8 @@ body{
 #dbg_bar tbody tr:nth-child(even){background-color:rgba(0,0,0,0.08);}
 #dbg_bar thead th{background:black;color:white;}
 
+#dbg_bar th{min-width:80px;}
+
 #dbg_bar code{
 	display:block;
 	background-color:rgb(20, 20, 20);
